# Trip_Planner

./: .gitignore  README.md  pyproject.toml
app/: cli.py  main.py
app/agents/: activity_agent.py  budget_agent.py  flight_agent.py  hotel_agent.py
app/config/: settings.py
app/graph/: builder.py  nodes.py  state.py  supervisor.py
app/schemas/: cost_schema.py  router_schema.py  search_schema.py  trip_schema.py
app/tools/: budget_tool.py  web_search.py
